# rs-arcade-coder

./: .editorconfig  .gitattributes  Cargo.toml  README.md  Taskfile.yml
.github/workflows/: docs.yml
arcadecoder_hw/: Cargo.toml
arcadecoder_hw/src/: display.rs  font.rs  inputs.rs  lib.rs
demo/: Cargo.toml
docs/: astro.config.mjs  package.json  pnpm-lock.yaml  setup.md
docs/src/content/docs/: api.md  index.mdx  links.md  setup.md
docs/src/content/docs/hardware/: buttons.md  display.md  overview.md
docs/src/content/docs/software/: circuitpython.md  connection.md
scoreboard/: Cargo.toml
