[package]
name = "arcadecoder_hw"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-futures = "0.1.1"
embassy-time = "0.4.0"
embedded-hal = "1.0.0"
esp-hal = { version = "1.0.0-rc.0", features = ["esp32", "unstable"] }
esp-println = { version = "0.15.0", features = ["esp32"] }

[dev-dependencies]
embassy-executor = { version = "0.7.0" }
esp-hal-embassy = { version = "0.9.0", features = ["esp32"] }
esp-backtrace = { version = "0.17.0", features = [
    "esp32",
    "panic-handler",
    "println",
] }
