[package]
name = "arcadecoder_hw"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-sync = { version = "0.7.2", optional = true }
esp-hal = { version = "1.0.0-rc.0", features = ["esp32", "unstable"] }
esp-println = { version = "0.15.0", features = ["esp32"] }

[features]
embassy = ["dep:embassy-sync"]
