[package]
edition = "2021"
name = "scoreboard"
version = "0.1.0"

[[bin]]
name = "scoreboard"
path = "./src/bin/main.rs"

[dependencies]
critical-section = "1.2.0"
esp-hal = { version = "0.23.1", features = ["esp32", "unstable"] }
esp-println = { version = "0.13.1", features = ["esp32", "log"] }
arcadecoder_hw = { path = "../arcadecoder_hw" }
log = "0.4.27"
embassy-executor = { version = "0.7.0" }
embassy-time = { version = "0.4.0" }
esp-hal-embassy = { version = "0.6.0", features = ["esp32"] }
esp-backtrace = { version = "0.15.1", features = [
    "esp32",
    "panic-handler",
    "println",
] }
embassy-futures = "0.1.1"
embassy-sync = "0.6.2"
static_cell = "2.1.0"
